--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,10 @@
 {% endblock %}
 
 {% block main %}
-<textarea class="form-control" id="" rows="3"></textarea>
-asdasdasdasdasd
-<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-
-
+    <div class="container">
+        <label for="plaintext">Plain Text</label>
+        <textarea class="form-control" id="plaintext" rows="3">    </textarea>
+        <label for="encrypted">Encrypted Text</label>
+        <textarea class="form-control" id="encrypted" rows="3">    </textarea>
+    </div>
 {% endblock %}
