--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 
 {% block main %}
     <div class="container">
-        <form>
+        <form action="/" method="post">
             <label for="plain">Plain Text</label>
-            <textarea class="form-control" id="plain" name="plain" rows="3"></textarea>
+            <textarea class="form-control" id="plain" name="plain" rows="3">{{plain}}</textarea>
             
             <label for="key">Key</label>
-            <textarea class="form-control" id="key" name="key" rows="3"></textarea>
+            <textarea class="form-control" id="key" name="key" rows="3">{{key}}</textarea>
 
             <button class="btn" type="submit">Encrypt</button>
         </form>
