--- a/templates/decrypt.html
+++ b/templates/decrypt.html
@@ -6,20 +6,20 @@
 
 {% block main %}
     <div class="container">
-        <form action="/encrypt" method="post">
-            <label for="plain">Plain Text</label>
-            <textarea class="form-control" id="plain" name="plain" rows="3" required>{{plain}}</textarea>
+        <form action="/decrypt" method="post">
+            <label for="encrypted">Encrypted text</label>
+            <textarea class="form-control" id="encrypted" name="encrypted" rows="3" required>{{encrypted}}</textarea>
             
             <label for="key">Key</label>
             <textarea class="form-control" id="key" name="key" rows="3" required>{{key}}</textarea>
 
-            <button class="btn" type="submit">Encrypt</button>
+            <button class="btn" type="submit">decrypt</button>
         </form>
 
 
         {% if encrypted %}
-            <h4>Encrypted text:</h4>
-            <p>{{encrypted}}</p>
+            <h4>Plain text:</h4>
+            <p>{{plain}}</p>
         {% endif %} 
         {% if error %}
             <h4>Error:</h4>
