--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/encrypt">Encrypt</a></li>
+                <li><a href="/decrypt">Decrypt</a></li>
             </ul>
         </div>
     </nav
