analysis functions added

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,13 +22,13 @@
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/encrypt">Encrypt</a></li>
                 <li><a href="/decrypt">Decrypt</a></li>
+                <li><a href="/analysis">Analysis</a></li>
             </ul>
         </div>
-    </nav
+    </nav>
 
 
     {% block main %}{% endblock %}
-    
     
 </body>
 </html>
