--- a/templates/decrypt.html
+++ b/templates/decrypt.html
@@ -11,7 +11,7 @@
             <textarea class="form-control" id="encrypted" name="encrypted" rows="3" required>{{encrypted}}</textarea>
             
             <label for="key">Key</label>
-            <textarea class="form-control" id="key" name="key" rows="3" required>{{key}}</textarea>
+            <textarea class="form-control" id="key" name="key" rows="3">{{key}}</textarea>
 
             <button class="btn" type="submit">decrypt</button>
         </form>
