--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,7 @@
                 <li><a href="/encrypt">Encrypt</a></li>
                 <li><a href="/decrypt">Decrypt</a></li>
                 <li><a href="/analysis">Analysis</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
