--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,7 @@
                 <li><a href="/decrypt">Decrypt</a></li>
                 <li><a href="/analysis">Analysis</a></li>
                 <li><a href="/login">Login</a></li>
+                <li><a href="/chat">Chat</a></li>
             </ul>
         </div>
     </nav>
