redirecting to chats(without logic)

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,9 +5,6 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/chat" method="post">
-        <input class="form-control" type="text" id="chatuser" name="chatuser" placeholder="username">
-        <button class="btn" type="submit">Search</button>
-    </form>
+    say hi to {{user}}
 
 {% endblock %}
