--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,8 +23,9 @@
                 <li><a href="/encrypt">Encrypt</a></li>
                 <li><a href="/decrypt">Decrypt</a></li>
                 <li><a href="/analysis">Analysis</a></li>
-                <li><a href="/login">Login</a></li>
                 <li><a href="/chat">Chat</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </nav>
