--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <div>Chat id is {{chatid}}</div>
+    <div>You are chating with {{user[0].username}}</div>
 
 
     {% for message in messages %}
