--- a/templates/chatsearch.html
+++ b/templates/chatsearch.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <form action="/chat" method="post">
-        <input class="form-control" type="text" id="user" name="user" placeholder="username">
+        <input class="form-control" type="text" id="user" name="user" placeholder="username" required>
         <button class="btn" type="submit">Search</button>
     </form>
 
