more aestetical changes. Menu, chat...

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <div>You are chating with {{user[0].username}}</div>
+    <h2>You are chating with {{user[0].username}}</h2>
 
 
     {% for message in messages %}
