--- a/static/styles.css
+++ b/static/styles.css
@@ -15,9 +15,16 @@ nav{
 }
 
 .message{
+    margin: 20px;
+}
+
+.message-text{
     width:fit-content;
-    border: 1px solid rgb(49, 53, 59);
-    border-radius: 1px;
+    border: 1px solid rgb(235, 236, 237);
+    border-radius: 15px;
     margin: 2px;
     padding: 3px 10px 3px 10px;
+    background-color: rgb(235, 243, 243);
+    color: rgb(125, 125, 125);
+    font-size: large;
 }
