--- a/templates/chat.html
+++ b/templates/chat.html
@@ -9,7 +9,11 @@
 
 
     {% for message in messages %}
-        <div class="message">{{message.message}}</div>
+        <div class="message">
+            <div class="message-user">{{message.sender_username}}</div>
+            <div class="message-text">{{message.message}}</div>
+            <div class="message-date">{{message.datetime}}</div>
+        </div>
     {% endfor %}
 
 
