chat interface enhanced

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -9,7 +9,8 @@
 
 
     {% for message in messages %}
-        <div class="message">
+        
+        <div class="message{% if message.sender_username!=user[0].username %} right{% endif %}">
             <div class="message-user">{{message.sender_username}}</div>
             <div class="message-text">{{message.message}}</div>
             <div class="message-date">{{message.datetime}}</div>
