--- a/static/styles.css
+++ b/static/styles.css
@@ -14,17 +14,41 @@ nav{
     padding-right: 10px;
 }
 
-.message{
-    margin: 20px;
+.message {
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    max-width: 60%;
 }
+
+.right {
+    text-align: right;
+    margin-left:auto;
+}
+
 
 .message-text{
     width:fit-content;
     border: 1px solid rgb(235, 236, 237);
     border-radius: 15px;
-    margin: 2px;
+    margin-top: 2px;
     padding: 3px 10px 3px 10px;
     background-color: rgb(235, 243, 243);
     color: rgb(125, 125, 125);
     font-size: large;
+}
+
+.right > .message-text{
+    margin-left: auto;
+    background-color: rgb(167, 255, 191);
+}
+
+.message-user {
+    font-weight: bold;
+}
+
+.message-date {
+    font-size: 0.8em;
+    color: #888;
+    margin-top: 5px;
 }
