now possible to decrypt messages in the chat

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,7 +12,15 @@
         
         <div class="message{% if message.sender_username!=user[0].username %} right{% endif %}">
             <div class="message-user">{{message.sender_username}}</div>
-            <div class="message-text">{{message.message}}</div>
+            <div class="message-text">{% if decrypted and messageid==message.id %} {{decrypted}} {% else %} {{message.message}} {% endif %}</div>
+            <div class="message-decrypt">
+                <form action="/chat/{{chatid}}" class="message-form" id='selectForm' method="post">
+                    <input type="hidden" name="message-id" value="{{message.id}}">
+                    <input type="hidden" name="message-text" value="{{message.message}}">
+                    <textarea class="form-control" id="message-key" name="message-key" rows="1"></textarea>
+                    <button class="btn" type="submit" value="">decrypt</button>
+                </form>
+            </div>
             <div class="message-date">{{message.datetime}}</div>
         </div>
     {% endfor %}
