--- a/templates/decrypt.html
+++ b/templates/decrypt.html
@@ -34,15 +34,32 @@
             <button class="btn" type="submit">decrypt</button>
         </form>
 
-
-        {% if encrypted %}
-            <h4>Plain text:</h4>
-            <p>{{plain}}</p>
-        {% endif %} 
-        {% if error %}
-            <h4>Error:</h4>
-            <p>{{error}}</p>
-        {% endif %} 
+        <div class="computed">
+            {% if encrypted %}
+                <h4>Encrypted text:</h4>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Key</th>
+                            <th>Likelihood</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for key in plain %}
+                            <tr>
+                                <td>{{key[0]}}</td>
+                                <td>{{key[1]}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% endif %} 
+            {% if error %}
+                <h4>Error:</h4>
+                <p>{{error}}</p>
+            {% endif %}
+        </div>
+         
     </div>
 
 
