--- a/templates/decrypt.html
+++ b/templates/decrypt.html
@@ -40,10 +40,7 @@
                     <p>{{plain}}</p>
                 {% endif %}
                 {% if mode=='guess' %}
-                    {% if plainguess %}
-                        <h4>Guess:</h4>
-                        <p>{{plainguess}}</p>
-                    {% endif %}
+                    <h4>Key guesses</h4>
                     <div class="table-responsive">
                         <table class="table table-hover">
                             <thead>
@@ -57,7 +54,6 @@
                                     <tr>
                                         <td>
                                             <form action="/decrypt" id="guessForm" method="post">
-                                                <input type="hidden" name="keyguess" value="{{key[0]}}">
                                                 <button class="btn" type="button" onclick="submitGuess('{{ key[0] }}')">{{ key[0] }}</button>
                                             </form>
                                         </td>
@@ -67,6 +63,13 @@
                             </tbody>
                         </table>
                     </div>
+
+                    {% if plainguess %}
+                        <div class="plainguess">
+                            <h4>Guess:</h4>
+                            <p>{{plainguess}}</p>
+                        </div>
+                    {% endif %}
                     
                 {% endif %}
             {% endif %} 
